header  title changed

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <header>
         <figure>
             <figcaption>
-                <a itemprop="url" href="index.html" id="logoTitle">AINVNT SERVICE</a>
+                <a itemprop="url" href="index.html" id="logoTitle">AINVNT</a>
             </figcaption>
         </figure>
         <nav>
