--- a/index.html
+++ b/index.html
@@ -20,6 +20,21 @@
     <link href="https://fonts.googleapis.com/css?family=Merriweather:400,700&amp;family=Playfair+Display:wght@900"
         rel="stylesheet">
     <link rel="stylesheet" href="resources/css/custom.css">
+    <script>
+        (function (i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r;
+            i[r] = i[r] || function () {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date();
+            a = s.createElement(o), m = s.getElementsByTagName(o)[0];
+            a.async = 1;
+            a.src = g;
+            m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', 'resources/js/analytics.js',
+            'ga');
+        ga('create', 'G-P00Z1QWJ74', 'auto');
+        ga('send', 'pageview');
+    </script>
 </head>
 
 <body>
