--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             m.parentNode.insertBefore(a, m)
         })(window, document, 'script', 'resources/js/analytics.js',
             'ga');
-        ga('create', 'G-P00Z1QWJ74', 'auto');
+        ga('create', 'G-YC8RFVVGBS', 'auto');
         ga('send', 'pageview');
     </script>
 </head>
